--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,33 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # State management
+  flutter_riverpod: ^2.4.9
+  
+  # Image handling
+  image_picker: ^1.0.4
+  
+  # JSON serialization
+  json_annotation: ^4.8.1
+  
+  # HTTP requests for model download
+  http: ^1.1.0
+  
+  # Path provider for file storage
+  path_provider: ^2.1.1
+  
+  # Icons
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # Code generation
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
+
+  # Linting
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
