--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,21 +39,28 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     // MediaPipe and TensorFlow Lite dependencies
-    implementation 'com.google.mediapipe:tasks-genai:0.10.25'
-    implementation 'com.google.mediapipe:tasks-vision:0.10.21'
-    implementation 'org.tensorflow:tensorflow-lite:2.14.0'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.14.0'
+    implementation(name: 'tasks-genai-0.10.25', ext: 'aar')
+    implementation(name: 'tasks-vision-0.10.21', ext: 'aar')
+    implementation 'org.tensorflow:tensorflow-lite:2.13.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.13.0'
     
     // HTTP client for model download
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
     
     // JSON parsing
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation "androidx.core:core-ktx:1.10.1"
 }
 
 flutter {
