Refactor and enhance AI emergency app functionality
- Updated app name and description in pubspec.yaml.
- Added new dependencies for audio recording and speech recognition.
- Refactored AI engine to utilize TensorFlow Lite for model inference.
- Implemented new home screen with improved UI and state management using Riverpod.
- Removed obsolete AI test screen and related provider.
- Introduced permission handling for microphone, camera, and location access.
- Enhanced SMS dialog for emergency message confirmation.
- Updated Gradle files for compatibility with latest SDK versions.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     namespace = "com.google.aidy"
-    compileSdk = 35
+    compileSdkVersion 35
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -21,8 +21,8 @@ android {
 
     defaultConfig {
         applicationId = "com.google.aidy"
-        minSdk = 24
-        targetSdk = 35
+        minSdkVersion 26
+        targetSdkVersion 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         multiDexEnabled = true
