--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=false
+android.compileSdkVersion=35
+android.targetSdkVersion=35
+android.buildToolsVersion=35.0.0
+flutter.compileSdkVersion=35
+flutter.targetSdkVersion=35
+flutter.minSdkVersion=24
