feat: Add model loading screen and implement model downloader
- Created ModelLoadingScreen to handle model checking and downloading.
- Implemented ModelDownloader service for downloading and verifying model files.
- Updated AiService to utilize the new model loading and parsing logic.
- Added necessary dependencies for Dio and shared_preferences.
- Updated web app metadata and manifest for new project name.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "aidy",
-    "short_name": "aidy",
+    "name": "myapp",
+    "short_name": "myapp",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "gemma 3 embedded in an offline emergency app companion",
+    "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
