--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,10 @@ dependencies {
     // JSON parsing
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "androidx.core:core-ktx:1.10.1"
+    
+    // Flutter dependencies
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.annotation:annotation:1.7.0'
 }
 
 flutter {
