--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,9 +1,5 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
-android.enableJetifier=false
-android.compileSdkVersion=35
-android.targetSdkVersion=35
-android.buildToolsVersion=35.0.0
-flutter.compileSdkVersion=35
-flutter.targetSdkVersion=35
-flutter.minSdkVersion=24
+android.enableJetifier=true
+gradle.user.home=/home/user/.gradle
+org.gradle.caching=true
