--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,14 @@ dependencies:
   json_annotation: ^4.8.1
   speech_to_text: ^7.1.0
   image_picker: ^1.1.2
-  permission_handler: ^12.0.1
-  # geolocator: ^14.0.2  # Temporarily commented out due to build issues
+  permission_handler: ^11.3.1
   record: ^6.0.0
   just_audio: ^0.9.36
-  path_provider: ^2.1.5
+  path_provider: ^2.1.3
+  tflite_flutter: ^0.11.0
+  dio: ^5.4.0
+  flutter_gemma: ^0.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  #     - assets/model/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
